--- a/src/main/resources/static/projectInterface.html
+++ b/src/main/resources/static/projectInterface.html
@@ -83,6 +83,31 @@
                 }
             });
 
+            //RPC接口列表展示
+            $.get("interfaceRpc/findInterfaceRpcList", null, function (data) {
+                if (data != null && data.length > 0) {
+                    var trElements = "";
+                    for (var i = 0; i < data.length; i++) {
+                        var trElement = "<tr>";
+                        trElement += ("<td class='text-center'>" + data[i].idText + "</td>");
+                        trElement += ("<td class='text-center'>" + data[i].name + "</td>");
+                        trElement += ("<td class='text-center'>" + data[i].className + "</td>");
+                        trElement += ("<td class='text-center'>" + data[i].methodName + "</td>");
+                        trElement += ("<td class='text-center'>" +
+                        "<button class=\"btn btn-xs btn-success\" data-interfaceid='" + data[i].idText + "' data-toggle='modal' data-target='#myRpcModal'>编辑</button>" +
+                        "&nbsp;&nbsp;" +
+                        "<button class=\"btn btn-xs btn-danger\" data-interfaceid='" + data[i].idText + "' data-toggle='modal' data-target='#deleteInterfaceModal'>删除</button>" +
+                        "&nbsp;&nbsp;" +
+                        "<button class=\"btn btn-xs btn-warning\" data-interfaceid='" + data[i].idText + "' data-toggle=\"modal\" data-target=\"#myRpcPreviewModal\">预览 </button>" +
+                        "</td>");
+                        trElements += trElement;
+                    }
+                    $("#rpcTableTBody").html(trElements);
+                } else {
+                    $("#rpcTableTBody").html("<tr><td colspan='6'>暂无信息</td></tr>");
+                }
+            });
+
             //HTTP接口删除事件
             $("#httpTableTBody").delegate("button.btn-danger", "click", function () {
                 var interfaceId = $(this).attr("data-interfaceid");
@@ -595,30 +620,30 @@
                     <th class="text-center">接口类名</th>
                     <th class="text-center">方法名称</th>
                     <th class="text-center">操作</th>
-                    <tbody>
-                    <tr>
-                        <td class="text-center">
-                            20170711100808001
-                        </td>
-                        <td class="text-center">
-                            查询用户接口
-                        </td>
-                        <td class="text-center">
-                            com.bozhong.test.service.UserService
-                        </td>
-                        <td class="text-center">
-                            findUserById
-                        </td>
-                        <td class="text-center">
-                            <button class="btn btn-xs btn-success">编辑</button>
-                            &nbsp;&nbsp;
-                            <button class="btn btn-xs btn-danger">删除</button>
-                            &nbsp;&nbsp;
-                            <button class="btn btn-xs btn-warning" data-toggle="modal"
-                                    data-target="#myRpcPreviewModal">预览
-                            </button>
-                        </td>
-                    </tr>
+                    <tbody id="rpcTableTBody">
+                    <!--<tr>-->
+                    <!--<td class="text-center">-->
+                    <!--20170711100808001-->
+                    <!--</td>-->
+                    <!--<td class="text-center">-->
+                    <!--查询用户接口-->
+                    <!--</td>-->
+                    <!--<td class="text-center">-->
+                    <!--com.bozhong.test.service.UserService-->
+                    <!--</td>-->
+                    <!--<td class="text-center">-->
+                    <!--findUserById-->
+                    <!--</td>-->
+                    <!--<td class="text-center">-->
+                    <!--<button class="btn btn-xs btn-success">编辑</button>-->
+                    <!--&nbsp;&nbsp;-->
+                    <!--<button class="btn btn-xs btn-danger">删除</button>-->
+                    <!--&nbsp;&nbsp;-->
+                    <!--<button class="btn btn-xs btn-warning" data-toggle="modal"-->
+                    <!--data-target="#myRpcPreviewModal">预览-->
+                    <!--</button>-->
+                    <!--</td>-->
+                    <!--</tr>-->
                     </tbody>
                 </table>
             </div>
