--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -39,13 +39,13 @@
                         var trElements = "";
                         for (var i = 0; i < data.rows.length; i++) {
                             var trElement = "<tr>";
-                            trElement += ("<td class='text-center'>" + data.rows[i].userIdText + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].usName + "</td>");
-                            trElement += ("<td class='text-center' >" + data.rows[i].cnName + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].userRoleText + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].cellPhone + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].email + "</td>");
-                            trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userIdText + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].usName + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].cnName + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userRoleText + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\" >" + data.rows[i].cellPhone + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].email + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
                             "data-target='#newUserModal' data-userid='" + data.rows[i].userIdText + "'>编辑</button>"
                             + "&nbsp;&nbsp;&nbsp;&nbsp;" +
                             "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
@@ -72,14 +72,14 @@
                         var trElements = "";
                         for (var i = 0; i < data.rows.length; i++) {
                             var trElement = "<tr>";
-                            trElement += ("<td class='text-center'>" + data.rows[i].projectIdText + "</td>");
-                            trElement += ("<td class='text-center'><a class='btn btn-xs btn-link' data-projectid='" + data.rows[i].projectIdText + "'>" + data.rows[i].projectName + "</a></td>");
-                            trElement += ("<td class='text-center' >" + data.rows[i].interfaceCount + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].projectManagerText + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].memberCount + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].projectDescribe + "</td>");
-                            trElement += ("<td class='text-center'>" + data.rows[i].createDateTime + "</td>");
-                            trElement += ("<td class='text-center'>" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].projectIdText + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\"><a class='btn btn-xs btn-link' data-projectid='" + data.rows[i].projectIdText + "'>" + data.rows[i].projectName + "</a></td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\" >" + data.rows[i].interfaceCount + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].projectManagerText + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].memberCount + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].projectDescribe + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].createDateTime + "</td>");
+                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
                             "data-target='#newProjectModal' data-projectid='" + data.rows[i].projectIdText + "'>编辑</button>"
                             + "&nbsp;&nbsp;&nbsp;&nbsp;"
                             + "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
@@ -372,14 +372,14 @@
                     <button type="button" class="btn btn-primary" id="userSearchBtn">搜索</button>
                 </form>
                 <br/>
-                <table class="table table-bordered">
+                <table class="table table-bordered"  style="table-layout:fixed;">
                     <th class="text-center">用户ID</th>
                     <th class="text-center">英文名称</th>
                     <th class="text-center">中文名称</th>
                     <th class="text-center">用户身份</th>
                     <th class="text-center">手机号</th>
                     <th class="text-center">工作邮箱</th>
-                    <th class="text-center">操作</th>
+                    <th class="text-center" style="width: 20%">操作</th>
                     <tbody id="userTableTBody">
                     <!--用户列表-->
                     </tbody>
@@ -416,7 +416,7 @@
                     <button type="button" class="btn btn-primary" id="projectSearchBtn">搜索</button>
                 </form>
                 <br/>
-                <table class="table table-bordered">
+                <table class="table table-responsive table-bordered"  style="table-layout:fixed;">
                     <th class="text-center">项目ID</th>
                     <th class="text-center">项目名称</th>
                     <th class="text-center">接口总数</th>
@@ -424,7 +424,7 @@
                     <th class="text-center">项目组成员</th>
                     <th class="text-center">项目描述</th>
                     <th class="text-center">创建时间</th>
-                    <th class="text-center">操作</th>
+                    <th class="text-center" width="30%">操作</th>
                     <tbody id="projectTableTBody">
                     <!--项目列表-->
                     </tbody>
