api接口文档管理系统设计文档

--- a/src/main/resources/static/projectDeploy.html
+++ b/src/main/resources/static/projectDeploy.html
@@ -213,7 +213,7 @@
             <div class="panel-body">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <table class="table table-bordered">
+                        <table class="table table-bordered" style="table-layout: fixed">
                             <tr>
                                 <th class="text-center">
                                     项目名称：
