api接口文档管理系统设计文档

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="webFrame/bootstrap-3.3.7/dist/css/bootstrap.min.css">
     <script src="webFrame/jquery-2.1.1/jquery.min.js"></script>
     <script src="webFrame/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
+    <script src="webFrame/handlebars-v4.0.10.js"></script>
     <script>
         $(function () {
 
