--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,39 @@
     <script src="webFrame/jquery-2.1.1/jquery.min.js"></script>
     <script src="webFrame/bootstrap-3.3.7/dist/js/bootstrap.min.js"></script>
     <script src="webFrame/handlebars-v4.0.10.js"></script>
+    <script src="webFrame/handlebars-jquery-plugin.js"></script>
+    <script id="userListTemplate" type="text/x-handlebars-template">
+        {{#if rows}}
+        {{#each rows}}
+        <tr>
+            <td class='text-center' style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">
+                {{userIdText}}
+            </td>
+            <td class='text-center' style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">{{usName}}</td>
+            <td class='text-center' style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">{{cnName}}</td>
+            <td class='text-center' style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">
+                {{userRoleText}}
+            </td>
+            <td class='text-center' style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">{{cellPhone}}
+            </td>
+            <td class='text-center' style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">{{email}}</td>
+            <td class='text-center' style="white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">
+                <button class="btn btn-success btn-xs" data-toggle='modal' data-target='#newUserModal'
+                        data-userid='{{userIdText}}'>编辑
+                </button>
+                &nbsp;&nbsp;&nbsp;&nbsp;
+                <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#deleteUserModal"
+                        data-userid='{{userIdText}}'>删除
+                </button>
+            </td>
+        </tr>
+        {{/each}}
+        {{else}}
+        <tr>
+            <td class='text-center' colspan='7'>没有记录！</td>
+        </tr>
+        {{/if}}
+    </script>
     <script>
         $(function () {
 
@@ -36,28 +69,29 @@
                     userNameCondition: $("#userNameCondition").val(),
                     contactWayCondition: $("#contactWayCondition").val()
                 }, function (data) {
-                    if (data != null && data.rows != null && data.rows.length > 0) {
-                        var trElements = "";
-                        for (var i = 0; i < data.rows.length; i++) {
-                            var trElement = "<tr>";
-                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userIdText + "</td>");
-                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].usName + "</td>");
-                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].cnName + "</td>");
-                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userRoleText + "</td>");
-                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\" >" + data.rows[i].cellPhone + "</td>");
-                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].email + "</td>");
-                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
-                            "data-target='#newUserModal' data-userid='" + data.rows[i].userIdText + "'>编辑</button>"
-                            + "&nbsp;&nbsp;&nbsp;&nbsp;" +
-                            "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
-                            "data-target=\"#deleteUserModal\" data-userid='" + data.rows[i].userIdText + "'>删除</button>" + "</td>");
-                            trElement += "</tr>";
-                            trElements = trElements + trElement;
-                        }
-                        $("#userTableTBody").html(trElements);
-                    } else {
-                        $("#userTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
-                    }
+//                    if (data != null && data.rows != null && data.rows.length > 0) {
+//                        var trElements = "";
+//                        for (var i = 0; i < data.rows.length; i++) {
+//                            var trElement = "<tr>";
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userIdText + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].usName + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].cnName + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userRoleText + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\" >" + data.rows[i].cellPhone + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].email + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
+//                            "data-target='#newUserModal' data-userid='" + data.rows[i].userIdText + "'>编辑</button>"
+//                            + "&nbsp;&nbsp;&nbsp;&nbsp;" +
+//                            "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
+//                            "data-target=\"#deleteUserModal\" data-userid='" + data.rows[i].userIdText + "'>删除</button>" + "</td>");
+//                            trElement += "</tr>";
+//                            trElements = trElements + trElement;
+//                        }
+//                        $("#userTableTBody").html(trElements);
+//                    } else {
+//                        $("#userTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
+//                    }
+                    $("#userTableTBody").handlebars($("#userListTemplate"), data);
                     pagerControl($("#userManagerPanel"), data);
                 }, "json");
             }
@@ -373,7 +407,7 @@
                     <button type="button" class="btn btn-primary" id="userSearchBtn">搜索</button>
                 </form>
                 <br/>
-                <table class="table table-bordered"  style="table-layout:fixed;">
+                <table class="table table-bordered" style="table-layout:fixed;">
                     <th class="text-center">用户ID</th>
                     <th class="text-center">英文名称</th>
                     <th class="text-center">中文名称</th>
@@ -417,7 +451,7 @@
                     <button type="button" class="btn btn-primary" id="projectSearchBtn">搜索</button>
                 </form>
                 <br/>
-                <table class="table table-responsive table-bordered"  style="table-layout:fixed;">
+                <table class="table table-responsive table-bordered" style="table-layout:fixed;">
                     <th class="text-center">项目ID</th>
                     <th class="text-center">项目名称</th>
                     <th class="text-center">接口总数</th>
