--- a/src/main/resources/static/backup/index.html
+++ b/src/main/resources/static/backup/index.html
@@ -69,7 +69,28 @@
                     userNameCondition: $("#userNameCondition").val(),
                     contactWayCondition: $("#contactWayCondition").val()
                 }, function (data) {
-                    //模板引擎渲染用户列表
+//                    if (data != null && data.rows != null && data.rows.length > 0) {
+//                        var trElements = "";
+//                        for (var i = 0; i < data.rows.length; i++) {
+//                            var trElement = "<tr>";
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userIdText + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].usName + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].cnName + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].userRoleText + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\" >" + data.rows[i].cellPhone + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + data.rows[i].email + "</td>");
+//                            trElement += ("<td class='text-center' style=\"white-space:nowrap; overflow:hidden; text-overflow:ellipsis;\">" + "<button class=\"btn btn-success btn-xs\" data-toggle='modal' " +
+//                            "data-target='#newUserModal' data-userid='" + data.rows[i].userIdText + "'>编辑</button>"
+//                            + "&nbsp;&nbsp;&nbsp;&nbsp;" +
+//                            "<button class=\"btn btn-danger btn-xs\" data-toggle=\"modal\" " +
+//                            "data-target=\"#deleteUserModal\" data-userid='" + data.rows[i].userIdText + "'>删除</button>" + "</td>");
+//                            trElement += "</tr>";
+//                            trElements = trElements + trElement;
+//                        }
+//                        $("#userTableTBody").html(trElements);
+//                    } else {
+//                        $("#userTableTBody").html("<tr><td class='text-center' colspan='7'>没有记录！</td></tr>");
+//                    }
                     $("#userTableTBody").handlebars($("#userListTemplate"), data);
                     pagerControl($("#userManagerPanel"), data);
                 }, "json");
